# RelayAPI

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  THIRD_PARTY.md  docker-compose.yml  drizzle.config.ts  go.mod  go.sum  instrumentation.ts  librechat.yaml  package.json  pnpm-lock.yaml  skills-lock.json  vitest.config.mts
.github/workflows/: ci.yml  publish-ghcr.yml  publish.yml
app/: globals.css  layout.tsx  page.tsx
app/models/: route.ts
app/tenant/: page.tsx
cliproxyapi-plugin/: Dockerfile  README.md  go.mod  main.go
cmd/relayapi/: main.go
components/: admin-dashboard.tsx  admin-tenants-section.tsx  admin-workbench.tsx  brand-mark.tsx  dashboard-chrome.tsx  quota-reset-history-sheet.tsx  tenant-dashboard.tsx  tenant-workbench.tsx  theme-provider.tsx  theme-toggle.tsx
components/admin/: api-keys-section.tsx  channels-section.tsx  credentials-section.tsx  grok-section.tsx  logs-section.tsx  overview-section.tsx  provider-credential-card.tsx  provider-credential-routing-fields.tsx  provider-quota-windows.tsx  proxy-pool-section.tsx  quota-section.tsx  (+1 more)
docs/: architecture.md
lib/: admin-api.ts  tenant-api.ts
server/: Cargo.toml  Dockerfile
server/migrations/: schema.sql
server/src/: config.rs  error.rs  main.rs
server/src/db/: entities.rs  mod.rs
server/src/http/: mod.rs
server/src/services/: admin_auth.rs  api_keys.rs  channels.rs  codex_credentials.rs  codex_quota.rs  crypto.rs  logs.rs  mod.rs  overview.rs  proxy_pool.rs  settings.rs  tenants.rs  usage.rs
server/src/upstream/codex/: chat.rs  images.rs  mod.rs  models.rs  oauth.rs  relay.rs  sse.rs  stream_audit.rs
web/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
(+299 files in other folders)
